--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <section>
         <nav>
    
-            <a class="menu" id="hom">Home</a>
-            <a class="menu">About Me</a>
-            <a class="menu">Resume</a>
-            <a class="menu">Contact Me</a>
+            <a class="menu" id="hom" href="index.html">Home</a>
+            <a class="menu" href="A2.html">About Me</a>
+            <a class="menu" href="Mohit's Resume01 .pdf">Resume</a>
+            <a class="menu" href="a3.html">Contact Me</a>
         </nav>
     </section>
    <div class="contain">
