--- a/A2.html
+++ b/A2.html
@@ -17,11 +17,11 @@
 <body scroll="no" style="overflow: hidden">
 <section>
         <nav>
-            <img src="logo1.jpg">
-            <a class="menu" id="hom">Home</a>
-            <a class="menu" class="selected">About Me</a>
-            <a class="menu">Resume</a>
-            <a class="menu">Contact Me</a>
+   
+            <a class="menu" id="hom" href="index.html">Home</a>
+            <a class="menu" href="A2.html">About Me</a>
+            <a class="menu" href="Mohit's Resume01 .pdf">Resume</a>
+            <a class="menu" href="a3.html">Contact Me</a>
         </nav>
     </section>
 
